@@ -1,15 +1,14 @@
 package net.minecraft.loot.condition;
 
-import com.google.common.collect.ImmutableSet;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import java.util.Optional;
 import java.util.Set;
 import net.minecraft.item.ItemStack;
 import net.minecraft.loot.context.LootContext;
-import net.minecraft.loot.context.LootContextParameter;
 import net.minecraft.loot.context.LootContextParameters;
 import net.minecraft.predicate.item.ItemPredicate;
+import net.minecraft.util.context.ContextParameter;
 
 public record MatchToolLootCondition(Optional<ItemPredicate> predicate) implements LootCondition {
 	public static final MapCodec<MatchToolLootCondition> CODEC = RecordCodecBuilder.mapCodec(
@@ -23,8 +22,8 @@ public record MatchToolLootCondition(Optional<ItemPredicate> predicate) implemen
 	}
 
 	@Override
-	public Set<LootContextParameter<?>> getRequiredParameters() {
-		return ImmutableSet.of(LootContextParameters.TOOL);
+	public Set<ContextParameter<?>> getAllowedParameters() {
+		return Set.of(LootContextParameters.TOOL);
 	}
 
 	public boolean test(LootContext lootContext) {
