@@ -15,11 +15,11 @@ import net.minecraft.component.type.BlockStateComponent;
 import net.minecraft.item.ItemStack;
 import net.minecraft.loot.condition.LootCondition;
 import net.minecraft.loot.context.LootContext;
-import net.minecraft.loot.context.LootContextParameter;
 import net.minecraft.loot.context.LootContextParameters;
 import net.minecraft.registry.Registries;
 import net.minecraft.registry.entry.RegistryEntry;
 import net.minecraft.state.property.Property;
+import net.minecraft.util.context.ContextParameter;
 
 public class CopyStateLootFunction extends ConditionalLootFunction {
 	public static final MapCodec<CopyStateLootFunction> CODEC = RecordCodecBuilder.mapCodec(
@@ -55,8 +55,8 @@ public class CopyStateLootFunction extends ConditionalLootFunction {
 	}
 
 	@Override
-	public Set<LootContextParameter<?>> getRequiredParameters() {
-		return ImmutableSet.of(LootContextParameters.BLOCK_STATE);
+	public Set<ContextParameter<?>> getAllowedParameters() {
+		return Set.of(LootContextParameters.BLOCK_STATE);
 	}
 
 	@Override
