@@ -1,6 +1,5 @@
 package net.minecraft.loot.function;
 
-import com.google.common.collect.ImmutableSet;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import java.util.List;
@@ -12,7 +11,7 @@ import net.minecraft.item.ItemStack;
 import net.minecraft.item.Items;
 import net.minecraft.loot.condition.LootCondition;
 import net.minecraft.loot.context.LootContext;
-import net.minecraft.loot.context.LootContextParameter;
+import net.minecraft.util.context.ContextParameter;
 
 public class FillPlayerHeadLootFunction extends ConditionalLootFunction {
 	public static final MapCodec<FillPlayerHeadLootFunction> CODEC = RecordCodecBuilder.mapCodec(
@@ -33,8 +32,8 @@ public class FillPlayerHeadLootFunction extends ConditionalLootFunction {
 	}
 
 	@Override
-	public Set<LootContextParameter<?>> getRequiredParameters() {
-		return ImmutableSet.of(this.entity.getParameter());
+	public Set<ContextParameter<?>> getAllowedParameters() {
+		return Set.of(this.entity.getParameter());
 	}
 
 	@Override
