@@ -1,14 +1,12 @@
 package net.minecraft.loot.provider.nbt;
 
-import com.google.common.collect.ImmutableSet;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import java.util.Set;
-import javax.annotation.Nullable;
 import net.minecraft.loot.context.LootContext;
-import net.minecraft.loot.context.LootContextParameter;
 import net.minecraft.nbt.NbtElement;
 import net.minecraft.util.Identifier;
+import net.minecraft.util.context.ContextParameter;
 
 public record StorageLootNbtProvider(Identifier source) implements LootNbtProvider {
 	public static final MapCodec<StorageLootNbtProvider> CODEC = RecordCodecBuilder.mapCodec(
@@ -20,14 +18,13 @@ public record StorageLootNbtProvider(Identifier source) implements LootNbtProvid
 		return LootNbtProviderTypes.STORAGE;
 	}
 
-	@Nullable
 	@Override
 	public NbtElement getNbt(LootContext context) {
 		return context.getWorld().getServer().getDataCommandStorage().get(this.source);
 	}
 
 	@Override
-	public Set<LootContextParameter<?>> getRequiredParameters() {
-		return ImmutableSet.of();
+	public Set<ContextParameter<?>> getRequiredParameters() {
+		return Set.of();
 	}
 }
